src/ui/css/yakyak/applayout.less
@keyframes spinnerRotate
{
    from{transform:rotate(0deg);}
    to{transform:rotate(360deg);}
}
.spin{
    animation: spinnerRotate 2s linear infinite;
}

@-webkit-keyframes sk-bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bouncedelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  } 40% {
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
  }
}

.about {
    margin-top: 3em;
    margin-bottom: 3em;
    text-align: center;
    img {
        height: 4em;
    }
    div {
        margin-bottom: .5em;
    }
}

.applayout {
    display: flex;
    height: 100%;
    .connecting {
        position: absolute;
        display: flex;
        align-items: center;
        width: 100%;
        height: 100%;
        background-color: rgba(255,255,255, 1);
        z-index: 1000;
        &.hide {
            visibility: hidden;
            opacity: 0;
            transition: visibility 0s 1s, opacity 1s ease-out;
        }
        .hide {
            display: none;
        }
        > div {
            margin: 0 auto;
            align-items: center;
            div  {
                text-align: center;
                margin-bottom: 15px; // cannot be relative measures
                img {
                    height: 160px; // cannot be relative measures
                }
                span.text {
                    text-align: center;
                    font-size: 30px; // cannot be relative measures
                    color: #555;
                }
                &.spinner {
                  text-align: center;
                  > div {
                    width: 18px;   // cannot be relative measures
                    height: 18px;  // cannot be relative measures
                    background-color: var(--yakyakgreen);

                    border-radius: 100%;
                    display: inline-block;
                    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
                    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
                  }
                  .bounce1 {
                    -webkit-animation-delay: -0.32s;
                    animation-delay: -0.32s;
                  }
                  .bounce2 {
                    -webkit-animation-delay: -0.16s;
                    animation-delay: -0.16s;
                  }
                }
            }
        }
    }
    > .controls {
        flex: none;
        position: fixed;
        top: 0;
        left: 0;
        .button {
            height: 30px;
            width: 30px;
            line-height: 30px;
            text-align: center;
            border-right: 1px solid var(--grey);
        }
    }
    .dragover #drop-overlay {
        display: block;
    }

    .dragover * {
      pointer-events: none;
    }

    #drop-overlay {
        z-index: 2;
        top: 0;
        left: 0;
        display: none;
        position: absolute;
        height: 100%;
        width: 100%;
        text-align: center;
        margin-top: auto;
        background-color: rgba(119, 119, 119, .4);
        font-size: 3em;
        & div.inner-overlay {
          top: ~"calc(var(--headerbarheight) * 1.5 / var(--zoom))";
          height: 85%;
          width: 85%;
          display: table;
          position: relative;
          margin: auto auto;
          border: 5px dashed rgba(100,100,100,1);
          border-radius: 12px;
          color: rgba(100,100,100,1);
          div {
            display: table-cell;
            vertical-align: middle;
          }
        }
    }

    > .leftresize {
        position: fixed;
        top: 0;
        left: 198px;
        bottom: 0;
        width: 5px;
        z-index: 1;
        flex: none;
        cursor: ew-resize;
        -webkit-user-select: none;
        &.minimal {
            display: none;
        }
    }
    > .left {
        -webkit-user-select: none;
        background: var(--white);
        flex: none;
        display: flex;
        flex-direction: column;
        width: 240px;
        position: relative;
        &.minimal{
            width: 81px !important;
        }
        &:after{
            position: absolute;
            top: 0;
            bottom: 0;
            right: 0;
            width: 0;
            border-right: 1px solid rgba(0, 0, 0, .1);
            display: block;
            content: '';
        }
        > .list {
            flex: 1;
            overflow-x: hidden;
            overflow-y: scroll;
        }
        > .lfoot {
            flex: none;
        }
    }
    > .right {
        position: relative;
        flex: 1;
        display: flex;
        flex-direction: column;
        background: linear-gradient(var(--green), var(--green) ~"calc(var(--headerbarheight) / var(--zoom))", var(--lightgrey) ~"calc(var(--headerbarheight) / var(--zoom))");
        > .main {
            flex: 1;
            overflow-x: hidden;
            overflow-y: scroll;
            padding-bottom: 35px;
            display: flex;
            flex-flow: column-reverse;
        }
        > .maininfo {
            flex: none;
            position: absolute;
            bottom: 50px;
        }
        > .foot {
            flex: none;
            background: var(--white);
            border-top: 1px solid rgba(0, 0, 0, .1);
        }
    }
    > .info {
        position: absolute;
        top: 0;
        right: 15px;
        > div {
            padding: 5px 10px;
            border: 1px solid var(--grey);
            border-top: none;
            background: white;
        }
    }
}

.applayout:not(.osx) ::-webkit-scrollbar {
    width: 6px;
}

.applayout:not(.osx) ::-webkit-scrollbar-thumb {
    background: var(--grey);
}

